# capn-raft

./: AUTHORS  CMakeLists.txt
cmake/modules/: Sanitizers.cmake  UseCxxStandard.cmake
include/: raft.h
proto/: CMakeLists.txt  append.capnp  cluster.capnp  command.capnp  log.capnp  raft.capnp  snapshot.capnp  vote.capnp
src/: CMakeLists.txt  append.cc  cluster.cc  cluster.h  config.cc  config.h  election.cc  log.h  network.cc  network.h  raft.cc  raftd.cc  server.cc  server.h  state.h
test/: CMakeLists.txt  raft_test.conf  test_config.cc  test_election.cc  test_log.cc
